# Galaxy-Renderer

./: CMakeLists.txt  README.md  SDLWnd.cpp  TextBuffer.cpp
QtOpenGlTest/: CMakeLists.txt
QtOpenGlTest/.cache/clangd/index/: main_opengl_widget_test.cpp.F975736153F758EE.idx  main_opengl_window_test.cpp.F9FD8BC70700EE30.idx  opengl_widget.cpp.DB324FDE5C089710.idx  opengl_widget.hpp.450C64A58CAFDBCD.idx  opengl_window.cpp.CEE720714597D9CA.idx  opengl_window.hpp.3AB622B3A77DB7DC.idx
QtOpenGlTest/include/: opengl_window.hpp
QtOpenGlTest/src/: opengl_window.cpp
include/: DisplayFlags.hpp  GalaxyWnd.hpp  GlAxisState.hpp  GlGalaxyState.hpp  GlTextState.hpp  Helper.hpp  OpenGLWnd.hpp  QtGlWidget.hpp  QtGlWindow.hpp  SDLWnd.hpp  TextBuffer.hpp  VertexBufferLines.hpp  VertexBufferStars.hpp  opengl_window.hpp
include/galaxy_gl_lib/: CumulativeDistributionFunction.hpp  Galaxy.hpp  GalaxyFlags.hpp  GlGalaxyState.hpp  Types.hpp  VertexBufferBase.hpp
include/old_gl_renderer/: GalaxyWnd.hpp  SDLWnd.hpp
src/: CumulativeDistributionFunction.cpp  DisplayFlags.cpp  Galaxy.cpp  GalaxyWnd.cpp  GlAxisState.cpp  GlGalaxyState.cpp  GlTextState.cpp  OpenGLWnd.cpp  QtGlWidget.cpp  QtGlWindow.cpp  SDLWnd.cpp  main.cpp  main_qt.cpp  opengl_window.cpp  qtglwindow.ui
src/galaxy_gl_lib/: DisplayFlags.cpp  GalaxyFlags.cpp  GlAxisState.cpp  GlGalaxyState.cpp
src/old_gl_renderer/: GalaxyWnd.cpp  SDLWnd.cpp  TextBuffer.cpp
